Update dotrc file to ignore dotfiles when adding them to Dotify

--- a/.dotrc
+++ b/.dotrc
@@ -1,5 +1,13 @@
 editor: 'vi'
 ignore:
+  dotfiles:
+  - .filezilla
+  - .rbenv
+  - .rvm
+  - .gem
+  - .rbx
+  - .ssh
+  - .NERDTreeBookmarks
   dotify:
   - '.git'
   - '.gitmodules'
