excludesfile finds file relative to $HOME
See http://www.kernel.org/pub/software/scm/git/docs/git-config.html
under 'core.excludesfile' for clearer explanation.

--- a/.gitconfig
+++ b/.gitconfig
@@ -56,6 +56,6 @@
   # With write access
   insteadOf = wgh:
 [core]
-  excludesfile = /Users/mattbridges/.gitignore_global
+  excludesfile = .gitignore_global
 [credential]
   helper = osxkeychain
