--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule ".vim/bundle/vim-ruby-minitest"]
 	path = .vim/bundle/vim-ruby-minitest
 	url = git://github.com/sunaku/vim-ruby-minitest.git
+[submodule ".vim/bundle/ColorSamplerPack"]
+	path = .vim/bundle/ColorSamplerPack
+	url = https://github.com/sjas/ColorSamplerPack.git
