--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule ".vim/bundle/bufkill.vim"]
 	path = .vim/bundle/bufkill.vim
 	url = git://github.com/mattdbridges/bufkill.vim.git
+[submodule ".vim/bundle/ag.vim"]
+	path = .vim/bundle/ag.vim
+	url = git://github.com/rking/ag.vim.git
