Use thoughtbot install bash scripts

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 scripts/trion-stuff
 scripts/location-specific
 .vim/ruby/command-t/Makefile
-!.vim/bundle/.keep
-.vim/bundle/*
+!vim/bundle/.keep
+vim/bundle/*
