Ctrl-A is tmux prefix

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,10 @@ set -g default-terminal 'screen-256color'
 
 set-option -g default-shell /bin/zsh
 
+# Prefix is Ctrl-A
+set -g prefix C-a
+unbind C-b
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
