Make tmux more responsive

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,9 +16,8 @@ bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-# act like GNU screen
-# unbind C-b
-# set -g prefix C-a
+# Be more responsive with commands
+set -s escape-time 1
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
