Reload tmux conf with ctrl-r

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,9 @@ set -g default-terminal 'screen-256color'
 
 set-option -g default-shell /bin/zsh
 
+# Reload ~/.tmux.conf with Ctrl-r
+bind r source-file ~/.tmux.conf
+
 # Prefix is Ctrl-A
 set -g prefix C-a
 unbind C-b
