--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,8 @@ set -g base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
+setw -g mode-mouse on
+
 # soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
