--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,7 @@ set -s escape-time 1
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
+set-window-option -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
