--- a/tmux.conf
+++ b/tmux.conf
@@ -31,9 +31,33 @@ set -g renumber-windows on
 
 setw -g mode-mouse on
 
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+##################
+# Status Bar
+##################
+
+# enable UTF-8 support in status bar
+set -g status-utf8 on
+
+# set refresh interval for status bar
+set -g status-interval 30
+
+# center the status bar
+set -g status-justify left
+
+# show session, window, pane in left status bar
+# set -g status-left-length 40
+# set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+
+# show hostname, date, time, and battery in right status bar
+set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)'
+
+# Status Bar Colors
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
+
+# Black with lighter text
+set -g status-bg colour235
+set -g status-fg white
 
 # increase scrollback lines
 set -g history-limit 10000
