Update and add more helpful tmux bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal 'screen-256color'
 set-option -g default-shell /bin/zsh
 
 # Reload ~/.tmux.conf with Ctrl-r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; display "Reloaded!"
 
 # act like vim
 setw -g mode-keys vi
@@ -16,8 +16,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+bind | split-window -h
+bind S split-window -v
+
+bind W kill-pane
 
 # Be more responsive with commands
 set -s escape-time 1
