Adding a few tmux bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,14 +12,22 @@ bind r source-file ~/.tmux.conf; display "Reloaded!"
 
 # act like vim
 setw -g mode-keys vi
+
+##################
+# Bindings
+##################
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
 bind | split-window -h
 bind S split-window -v
+bind N new-window
 
 bind W kill-pane
+bind C kill-window
 
 # Be more responsive with commands
 set -s escape-time 1
