Update tmux conf for Mac OS X copy paste

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,6 +29,15 @@ bind N new-window
 bind W kill-pane
 bind C kill-window
 
+# http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 # Be more responsive with commands
 set -s escape-time 1
 
