Adding block text selection for copy text in Vim
Using only 'v' fromt Tmux copy/paste mode would include Vim line
numbers. This allows the use of block selection to avoid the line
numbers.

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,7 @@ bind C kill-window
 # http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy 'C-v' rectangle-toggle # Begin selection in copy mode
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
