More intuitive bindings for next/previous windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,11 @@ bind | split-window -h
 bind S split-window -v
 bind N new-window
 
+unbind p
+bind-key p next-window
+unbind n
+bind-key n previous-window
+
 bind W kill-pane
 bind C kill-window
 
