--- a/tmux.conf
+++ b/tmux.conf
@@ -66,8 +66,8 @@ set -g status-interval 30
 set -g status-justify left
 
 # show session, window, pane in left status bar
-# set -g status-left-length 40
-# set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+set -g status-left-length 40
+set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
 set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)'
