--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -129,9 +129,9 @@
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>768 787 384 129 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>480 310 955 868 0 0 1920 1178 </string>
+	<string>0 4 1920 1174 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 395 585 473 0 0 1440 878 </string>
+	<string>960 4 960 1174 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>204 45 585 473 0 0 1440 878 </string>
 	<key>New Bookmarks</key>
@@ -935,7 +935,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-09-15T16:43:04Z</date>
+	<date>2014-10-01T17:20:38Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -972,6 +972,10 @@
 	<integer>0</integer>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findIgnoreCase_iTerm</key>
+	<true/>
+	<key>findRegex_iTerm</key>
+	<false/>
 	<key>iTerm Version</key>
 	<string>2.0</string>
 </dict>
