--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -125,7 +125,7 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>646 377 728 270 0 0 1920 1178 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>290 613 924 485 0 0 1920 1178 </string>
+	<string>150 348 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>768 787 384 129 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
@@ -935,7 +935,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-10-01T17:20:38Z</date>
+	<date>2014-10-14T18:19:28Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -965,7 +965,7 @@
 	<key>UseCompactLabel</key>
 	<true/>
 	<key>UseLionStyleFullscreen</key>
-	<true/>
+	<false/>
 	<key>WindowNumber</key>
 	<true/>
 	<key>WindowStyle</key>
