Tmux prompt is now awesome-sause

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,16 +65,23 @@ set -g status-interval 30
 # center the status bar
 set -g status-justify left
 
-# show session, window, pane in left status bar
+set -g status-utf8 on
+set -g status-keys vi
+
 set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+set -g status-left '#[fg=green]: #h : #[fg=yellow][#[fg=green]#S#[fg=yellow]] #[fg=brightblue]#I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)'
+set -g status-justify 'centre'
+set -g status-right-length 100
+set -g status-right "#[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)"
+
 
 # Status Bar Colors
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-format "#[fg=cyan]#I#[fg=brightblue]:#[fg=yellow]#W#[default]#F"
+set-window-option -g window-status-separator " | "
+set-window-option -g window-status-current-fg yellow
+set-window-option -g window-status-current-bg black
 
 # Black with lighter text
 set -g status-bg colour235
