--- a/tmux.conf
+++ b/tmux.conf
@@ -67,21 +67,26 @@ set -g status-justify left
 
 set -g status-utf8 on
 set -g status-keys vi
-
-set -g status-left-length 40
-set -g status-left '#[fg=green]: #h : #[fg=yellow][#[fg=green]#S#[fg=yellow]] #[fg=brightblue]#I:#P#[default]'
-
-# show hostname, date, time, and battery in right status bar
 set -g status-justify 'centre'
+
+# Status Right #
+# Show name of user, session name, and window:pane
+set -g status-left-length 40
+set -g status-left '#[fg=yellow][#[fg=brightblue]#S#[fg=yellow]] #[fg=brightblue]{#I, #P}#[default]'
+
+# Status Left #
+# Show IP address, date, and time
 set -g status-right-length 100
-set -g status-right "#[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)"
+set -g status-right "#[fg=brightgreen] matt ::#[default] #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p"
 
 
 # Status Bar Colors
-set-window-option -g window-status-current-format "#[fg=cyan]#I#[fg=brightblue]:#[fg=yellow]#W#[default]#F"
-set-window-option -g window-status-separator " | "
+set-window-option -g window-status-current-format "#[fg=brightblue]{#[fg=brightyellow]#I#[fg=brightblue], #[fg=brightyellow]:#W#[default]#[fg=brightblue], #[fg=brightyellow]#F#[default]#[fg=brightblue]}#[default]"
+set-window-option -g window-status-format "{#I, :#W, #F}"
+set-window-option -g window-status-separator " |> "
 set-window-option -g window-status-current-fg yellow
 set-window-option -g window-status-current-bg black
+set-window-option -g window-status-fg "#555555"
 
 # Black with lighter text
 set -g status-bg colour235
