Tweak display for tmux window status

--- a/tmux.conf
+++ b/tmux.conf
@@ -80,8 +80,8 @@ set -g status-right-length 100
 set -g status-right "#[fg=brightgreen] matt ::#[default] #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]:: %d %b %Y #[fg=green]::%l:%M %p"
 
 # Status Bar Colors
-set-window-option -g window-status-current-format "#[fg=brightblue]{#[fg=brightyellow]#I#[fg=brightblue], #[fg=brightyellow]:#W#[default]#[fg=brightblue], #[fg=brightyellow]#F#[default]#[fg=brightblue]}#[default]"
-set-window-option -g window-status-format "{#I, :#W, #F}"
+set-window-option -g window-status-current-format "#[fg=brightblue]{#[fg=brightyellow]#I#[fg=brightblue], #[fg=brightgreen]#F#[fg=brightyellow]:#W#[default]#[fg=brightblue]}#[default]"
+set-window-option -g window-status-format "{#I, #F:#W}"
 set-window-option -g window-status-separator " |> "
 set-window-option -g window-status-current-fg yellow
 set-window-option -g window-status-current-bg black
