Adding battery status to tmux status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,12 +72,12 @@ set -g status-justify 'centre'
 # Status Right #
 # Show name of user, session name, and window:pane
 set -g status-left-length 40
-set -g status-left '#[fg=yellow][#[fg=brightblue]#S#[fg=yellow]] #[fg=brightblue]{#I, #P}#[default]'
+set -g status-left '#[fg=yellow][#[fg=brightgreen]#h:#[fg=brightblue]#S#[fg=yellow]] #[fg=brightblue]{#I, #P}#[default]'
 
 # Status Left #
 # Show IP address, date, and time
 set -g status-right-length 100
-set -g status-right "#[fg=brightgreen] matt ::#[default] #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]:: %d %b %Y #[fg=green]::%l:%M %p"
+set -g status-right "#(~/.bin/battery -t) #[fg=brightgreen]::#[default] #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]:: %d %b %Y #[fg=green]::%l:%M %p"
 
 # Status Bar Colors
 set-window-option -g window-status-current-format "#[fg=brightblue]{#[fg=brightyellow]#I#[fg=brightblue], #[fg=brightgreen]#F#[fg=brightyellow]:#W#[default]#[fg=brightblue]}#[default]"
