Quick pane resizing

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Resizing ---------------------------------------------------------------
+bind-key C-h resize-pane -L
+bind-key C-j resize-pane -D
+bind-key C-k resize-pane -U
+bind-key C-l resize-pane -R
+
 bind | split-window -h
 bind S split-window -v
 
