Current window in status line is bold

--- a/tmux.conf
+++ b/tmux.conf
@@ -86,7 +86,7 @@ set -g status-right-length 100
 set -g status-right "#(~/.bin/battery -t) #[fg=brightgreen]::#[default] #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]:: %d %b %Y #[fg=green]::%l:%M %p"
 
 # Status Bar Colors
-set-window-option -g window-status-current-format "#[fg=brightblue]{#[fg=brightyellow]#I#[fg=brightblue], #[fg=brightgreen]#F#[fg=brightyellow]:#W#[default]#[fg=brightblue]}#[default]"
+set-window-option -g window-status-current-format "#[fg=brightblue,bold]{#[fg=brightyellow]#I#[fg=brightblue], #[fg=brightgreen]#F#[fg=brightyellow]:#W#[fg=brightblue]}"
 set-window-option -g window-status-format "{#I, #F:#W}"
 set-window-option -g window-status-separator " |> "
 set-window-option -g window-status-current-fg yellow
