Simplifying window display on tmux
Elixir style maps and atoms are cool, but take up too much space on my
screen. Shrinking it down a bit...

--- a/tmux.conf
+++ b/tmux.conf
@@ -83,11 +83,11 @@ set -g status-left '#[fg=yellow][#[fg=brightgreen]#h:#[fg=brightblue]#S#[fg=yell
 # Status Left #
 # Show IP address, date, and time
 set -g status-right-length 100
-set -g status-right "#(~/.bin/battery -a -t -p -g brightgreen) #[fg=brightgreen]::#[default] #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p"
+set -g status-right "#(~/.bin/battery -a -t -p -g brightgreen) #[default] #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p"
 
 # Status Bar Colors
-set-window-option -g window-status-current-format "#[fg=brightblue,bold]{#[fg=brightyellow]#I#[fg=brightblue], #[fg=brightgreen]#F#[fg=brightyellow]:#W#[fg=brightblue]}"
-set-window-option -g window-status-format "{#I, #F:#W}"
+set-window-option -g window-status-current-format "#[fg=cyan]#I#[default]:#[fg=brightyellow]#W#[default]#[fg=green]#F"
+set-window-option -g window-status-format "#I:#W#F"
 set-window-option -g window-status-separator " |> "
 set-window-option -g window-status-current-fg yellow
 set-window-option -g window-status-current-bg black
