Greatly simplify and slim down the tmux prompt

--- a/tmux.conf
+++ b/tmux.conf
@@ -66,29 +66,27 @@ setw -g mode-mouse on
 set -g status-utf8 on
 
 # set refresh interval for status bar
-set -g status-interval 5
+set -g status-interval 1
 
 # center the status bar
 set -g status-justify left
 
 set -g status-utf8 on
 set -g status-keys vi
-set -g status-justify 'centre'
+set -g status-justify 'left'
 
 # Status Right #
 # Show name of user, session name, and window:pane
 set -g status-left-length 40
-set -g status-left '#[fg=yellow][#[fg=brightgreen]#h:#[fg=brightblue]#S#[fg=yellow]] #[fg=brightblue]{#I, #P}#[default]'
+set -g status-left '#[fg=green]#S #[default]| #[fg=brightblue]#I:#P#[default]  '
 
 # Status Left #
 # Show IP address, date, and time
 set -g status-right-length 100
-set -g status-right "#(~/.bin/battery -a -t -p -g brightgreen) #[default] #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p"
+set -g status-right "#(~/.bin/battery -a -t -p -g brightgreen) #[default] #[fg=yellow]:: %l:%M %p"
 
 # Status Bar Colors
-set-window-option -g window-status-current-format "#[fg=cyan]#I#[default]:#[fg=brightyellow]#W#[default]#[fg=green]#F"
 set-window-option -g window-status-format "#I:#W#F"
-set-window-option -g window-status-separator " |> "
 set-window-option -g window-status-current-fg yellow
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-fg "#555555"
