Resize panes quickly in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,10 +23,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Resizing ---------------------------------------------------------------
-bind-key C-h resize-pane -L
-bind-key C-j resize-pane -D
-bind-key C-k resize-pane -U
-bind-key C-l resize-pane -R
+bind-key C-h resize-pane -L 10
+bind-key C-j resize-pane -D 10
+bind-key C-k resize-pane -U 10
+bind-key C-l resize-pane -R 10
 
 bind | split-window -h
 bind S split-window -v
