Fixes tmux.conf error message on first load

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal 'screen-256color'
 set-option -g default-shell /bin/zsh
 
 # Reload ~/.tmux.conf with Ctrl-r
-bind r source-file ~/.tmux.conf; display "Reloaded!"
+bind-key r source-file ~/.tmux.conf\; display-message "Reloaded!"
 
 # act like vim
 setw -g mode-keys vi
