--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -303,12 +303,17 @@
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
+	<key>NSToolbar Configuration com.apple.NSColorPanel</key>
+	<dict>
+		<key>TB Is Shown</key>
+		<integer>1</integer>
+	</dict>
 	<key>NSWindow Frame Preferences</key>
 	<string>114 136 924 485 0 0 1280 777 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>2640 -5 592 584 2560 -198 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 1280 800 0 0 1280 777 </string>
+	<string>0 4 1280 773 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -469,11 +474,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.097826063632965088</real>
+				<real>0.027450980618596077</real>
 				<key>Green Component</key>
-				<real>0.060920167714357376</real>
+				<real>0.027450980618596077</real>
 				<key>Red Component</key>
-				<real>0.0540635846555233</real>
+				<real>0.027450980618596077</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -883,7 +888,7 @@
 			<key>Scrollback Lines</key>
 			<integer>1000</integer>
 			<key>Scrollback With Status Bar</key>
-			<false/>
+			<true/>
 			<key>Scrollback in Alternate Screen</key>
 			<true/>
 			<key>Selected Text Color</key>
@@ -1049,7 +1054,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>453493894.62828898</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>457454845.115677</real>
+	<real>473526927.00462401</real>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -1110,11 +1115,11 @@
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>http://iterm2.com/appcasts/testing.xml</string>
+	<string>https://iterm2.com/appcasts/testing.xml</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-07-01T14:47:23Z</date>
+	<date>2016-01-03T15:15:25Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1158,6 +1163,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>2.1.1</string>
+	<string>2.1.4</string>
 </dict>
 </plist>
