--- a/tmux.conf
+++ b/tmux.conf
@@ -78,16 +78,16 @@ set -g status-justify 'left'
 # Status Right #
 # Show name of user, session name, and window:pane
 set -g status-left-length 40
-set -g status-left '#[fg=green]#S #[default]| #[fg=brightblue]#I:#P#[default]  '
+set -g status-left '#[fg=colour33]#S #[default]| #[fg=brightcyan]#I:#P#[default]  '
 
 # Status Left #
 # Show IP address, date, and time
 set -g status-right-length 100
-set -g status-right "#(~/.bin/battery -a -t -p -g brightgreen) #[default] #[fg=yellow]:: %l:%M %p"
+set -g status-right "#(~/.bin/battery -a -t -p -g colour33) #[default] #[fg=cyan]:: %l:%M %p"
 
 # Status Bar Colors
 set-window-option -g window-status-format "#I:#W#F"
-set-window-option -g window-status-current-fg yellow
+set-window-option -g window-status-current-fg cyan
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-fg "#555555"
 
