Improve tmux status colors even further

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,7 +78,7 @@ set -g status-justify 'left'
 # Status Right #
 # Show name of user, session name, and window:pane
 set -g status-left-length 40
-set -g status-left '#[fg=colour33]#S #[default]| #[fg=brightcyan]#I:#P#[default]  '
+set -g status-left '#[fg=colour24]#S #[default]| #[fg=colour78]#I:#P#[default]  '
 
 # Status Left #
 # Show IP address, date, and time
